// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShoppingListTable > should render correctly 1`] = `
<div>
  <ol>
    <div
      id="0"
      style="border-style: solid; border-width: 2px; margin-top: 5pt;"
    >
      <div
        style="display: flex;"
      >
        <p
          style="css-float: left; width: 90%;"
        >
          test 1
        </p>
        <button
          style="css-float: right;"
        >
          Expand
        </button>
      </div>
    </div>
  </ol>
</div>
`;

exports[`ShoppingListTable > should render multiple correctly 1`] = `
<div>
  <ol>
    <div
      id="0"
      style="border-style: solid; border-width: 2px; margin-top: 5pt;"
    >
      <div
        style="display: flex;"
      >
        <p
          style="css-float: left; width: 90%;"
        >
          test 1
        </p>
        <button
          style="css-float: right;"
        >
          Expand
        </button>
      </div>
    </div>
    <div
      id="1"
      style="border-style: solid; border-width: 2px; margin-top: 5pt;"
    >
      <div
        style="display: flex;"
      >
        <p
          style="css-float: left; width: 90%;"
        >
          test 2
        </p>
        <button
          style="css-float: right;"
        >
          Expand
        </button>
      </div>
    </div>
  </ol>
</div>
`;
